# summarizer-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backfill_today.py  bot.db  docker-entrypoint.sh  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml  linters.yml
src/: backfill_all_today.py  config.py  db.py  gemini.py  handlers.py  main.py  scheduler.py  summarizer.py  utils.py
src/backfill/: backfill_all_today.py  backfill_today.py
src/panbot/: bot.py
src/petfinder/: pets.py
src/summarizer/: summarizer.py
src/tools/: README.md  config.py  db.py  generate_session.py  handlers.py  migration_to_postgres.py  pets.py  scheduler.py  utils.py
src/tools/backfill/: backfill_all_today.py  backfill_today.py
src/traits/: backfill_traits.py  compose_traits.py
tests/: test_panbot.py  test_scheduler.py  test_utils.py
tools/: README.md  generate_session.py
